<resources>
    <string name="app_name">FindIt</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_repeat_password_hint">Repeat password</string>
    <string name="register_submit_hint">Sign Up</string>
    <string name="register_submit_by_google_hint">Google</string>
    <string name="login_hint">Already have an account? Login</string>
    <string name="login_submit_hint">Log In</string>
    <string name="lost_button_hint">Lost Items</string>
    <string name="found_button_hint">Found Items</string>
    <string name="new_item_button">Add new lost or found item</string>
    <string name="add_item_main_string">Item Parameters</string>
    <string name="item_lost">Lost</string>
    <string name="item_found">Found</string>
    <string name="what_hint">What?</string>
    <string name="where_hint">Where?</string>
    <string name="color_hint">Color?</string>
    <string name="add_item_button">Add Item</string>
    <string name="register_hint">Dont have an account?Register</string>
    <string name="web_client_id">436236640478-nr25fu3gfi5jkluucpqte1lnrnp5lm18.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or_continue_with">or continue with</string>
    <string name="register_to_findit">Register to FindIt</string>
    <string name="login_to_findit">Login to FindIt</string>
    <string name="default_web_client_id">436236640478-nr25fu3gfi5jkluucpqte1lnrnp5lm18.apps.googleusercontent.com</string>
    <string name="big_verify_email">Email verification sent</string>
    <string name="small_verify_email">Please verify your email by clicking on verification link which is sent to your email</string>
    <string name="home">home</string>
    <string name="person">account</string>
    <string name="add">add item</string>
    <string name="title_hint">Title</string>
    <string name="pick_image">Pick Image</string>
    <string name="x">X</string>
    <string name="remove_image">Remove image</string>
    <string name="log_out">Log out</string>
    <string name="my_posts">My posts</string>
    <string name="contact">Contact</string>
    <string name="add_description_time_etc">Add description,time,etc</string>
    <string name="back">Back</string>
    <string name="description">Description</string>
    <string name="color">Color</string>
    <string name="location">Location</string>
    <string name="conversations">Conversations</string>
    <string name="username">Username</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="my_posts_tv">My Posts</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="guest_mode">Guest Mode</string>
</resources>