<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LostFoundActivity">
    <LinearLayout
        android:id="@+id/header_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/lost_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/lost_found_buttons_clicked"
            android:text="@string/lost_button_hint"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/found_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/lost_found_buttons"
            android:text="@string/found_button_hint"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_item_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_item_button"
        android:background="@drawable/new_item_button"
        app:layout_constraintTop_toBottomOf="@+id/header_buttons" />

    <LinearLayout
        android:id="@+id/all_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_item_button">

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>