<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LoginActivity"
    android:background="@color/light_blue">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_findit"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginBottom="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.60"
        android:background="@drawable/auth_relative"
        android:paddingStart="20dp"
        android:paddingTop="50dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/auth_et"
            android:drawableLeft="@drawable/mail_icon"
            android:hint="@string/register_email_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"/>

        <EditText
            android:id="@+id/password"
            android:textColorHint="@color/dark_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginBottom="16dp"
            android:background="@drawable/auth_et"
            android:drawableLeft="@drawable/password"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/error_message_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:textColor="@color/red" />

        <RelativeLayout
            android:id="@+id/submit_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_message_login"
            android:gravity="center_horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textSize="16sp"
                android:background="@drawable/auth_submit"
                android:text="@string/login_submit_hint"
                android:textColor="@color/black" />

            <ProgressBar
                android:id="@+id/submit_pb"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:elevation="10dp"
                android:layout_centerInParent="true"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/continue_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/submit_rl"
            android:layout_marginTop="15dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:backgroundTint="@color/blue"
                android:text="@string/or_continue_with"
                android:textColor="@color/black" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/google_rl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/continue_with"
            android:gravity="center_vertical"
            android:background="@drawable/auth_submit_google"
            android:padding="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:gravity="center">
                <RelativeLayout
                    android:id="@+id/google_button_logo"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/google_logo"/>
                <TextView
                    android:id="@+id/google_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/register_submit_by_google_hint"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/google_pb"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="invisible"
                android:elevation="10dp"
                style="?android:attr/progressBarStyle"
                android:indeterminateTint="@color/blue"
                android:layout_centerInParent="true"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/reg_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/google_rl"
            android:layout_marginBottom="25dp">

            <TextView
                android:id="@+id/register_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:backgroundTint="@color/blue"
                android:text="@string/register_hint"
                android:textColor="@color/black" />


        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/guest_mode"
            android:layout_width="match_parent"
            android:layout_below="@+id/reg_rl"
            android:padding="17dp"
            android:text="@string/guest_mode"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>